--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 obsws-python==1.8.0
+PySide6==6.9.1
+PySide6_Addons==6.9.1
+PySide6_Essentials==6.9.1
 python-osc==1.9.3
+shiboken6==6.9.1
 websocket-client==1.8.0
