--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+altgraph==0.17.4
 obsws-python==1.8.0
+packaging==25.0
+pyinstaller==6.14.2
+pyinstaller-hooks-contrib==2025.8
 PySide6==6.9.1
 PySide6_Addons==6.9.1
 PySide6_Essentials==6.9.1
 python-osc==1.9.3
+setuptools==80.9.0
 shiboken6==6.9.1
 websocket-client==1.8.0
